[package]
name = "middle-monitor-sdk"
version = "0.1.2"
edition = "2021"
authors = ["Middle-Monitor"]
description = "Rust SDK for Middle-Monitor error reporting with OpenTelemetry"
license = "MIT"
repository = "https://github.com/middle-monitor/sdk-rust"

[dependencies]
opentelemetry = { version = "0.23", features = ["logs"] }
opentelemetry_sdk = { version = "0.23", features = ["rt-tokio", "logs"] }
opentelemetry-otlp = { version = "0.16", features = ["http-proto", "reqwest-client", "trace", "logs"] }
opentelemetry-semantic-conventions = "0.16"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8"
